Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberNumObjField.quorum
class Main
    Number n
    number num = 0.0
    action Main
        n:SetValue(7.5)
        num = cast(number, n)
        if num = 7.5
            output "passed"
        end
    end
end