Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextNumObjField.quorum
class main
    Number n
    text txt
    action Main
        n:SetValue(7.5)
        txt = cast(text, n)
    end
end